config/overlays/odh/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-controller-manager
spec:
  podSelector:
    matchLabels:
      control-plane: kserve-controller-manager
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workload-variant-autoscaler-controller-manager
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: workload-variant-autoscaler
  ingress:
    - {}
